20210418:
  * added --quiet flag to automatically enter default anser to most questions

20210416:
  * [gfursin] extended module:package to ask a user to select a variation 
    for a given package when there are multiple versions available.

20210414:
  * regular aggregation of the CK components from the community

20210412:
  * added components and workflows from ck-mxnet, ck-tvm and ck-tbd

20210410:
  * fixed TFLite packages 1.13, 1.14 and 1.15 (eigen library).
     https://github.com/ctuning/ck/issues/138
     https://github.com/ctuning/ck/issues/139

20210407: regular aggregation of the latest dev components